src/test/deca/context/invalid/provided/parametre_non_declare.deca
// Description:
//    Programme évoquant une fonction faisant usage d'une variable non déclarée.
//
// Resultats:
//    Ligne 11 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022

{
        int multiply(int x){
        	return(z*x);
        }
}
